--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" direction="rtl" dir="rtl" style="direction: rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="app">
-        <h1>Simple Quiz</h1>
+        <h1>اطلاعات عمومی خودت رو بسنج!</h1>
         <div class="quiz">
             <h2 id="question">Question goes here</h2>
             <div id="answer-buttons">
@@ -17,7 +17,7 @@
                 <button class="btn">Answer 3 </button>
                 <button class="btn">Answer 4 </button>
             </div>
-            <button id="next-btn">Next</button>
+            <button id="next-btn">بعدی</button>
         </div>
     </div>
     <script src="app.js"></script>
